# controllers/profile.controllers.js
@@ -22,25 +22,6 @@ module.exports = {
       let token = jwt.sign({ id: user.id }, JWT_SECRET);
       const { first_name, last_name, email, image_url } = user;
 
-      const existingNotification = await prisma.notification.findFirst({
-        where: {
-          user_id: user.id,
-          title: "Pengguna Memperbaharui Profil",
-        },
-      });
-
-      if (!existingNotification) {
-        const notification = await prisma.notification.create({
-          data: {
-            title: "Pengguna Memperbaharui Profil",
-            message: `Kamu telah memperbaharui Profil ${user.first_name} ${user.last_name}`,
-            user_id: user.id,
-          },
-        });
-        const io = req.app.get("io");
-        io.emit(`login`, { first_name, last_name });
-        io.emit(`user-${user.id}`, notification);
-      }
       return res.status(200).json({
         status: true,
         message: "Berhasil mengambil data",
@@ -110,6 +91,17 @@ module.exports = {
 
       delete userUpdate.password;
       let token = jwt.sign({ id: user.id }, JWT_SECRET);
+
+      const notification = await prisma.notification.create({
+        data: {
+          title: "Pengguna Login",
+          message: `Kamu telah memperbaharui profil, ${user.first_name} ${user.last_name}.`,
+          user_id: user.id,
+        },
+      });
+      const io = req.app.get("io");
+      io.emit(`login`, { first_name, last_name });
+      io.emit(`user-${user.id}`, notification);
 
       return res.status(200).json({
         status: true,
